--- a/style.css
+++ b/style.css
@@ -24,6 +24,19 @@ main {
   flex-direction: column;
 }
 
+.info-card {
+  position: fixed;
+  top: 10px;
+  left: 50%;
+  transform: translateX(-50%);
+  padding: 8px;
+  background-color: white;
+  border-radius: 10px;
+  box-shadow: 8px 8px var(--gray-950);
+  border: 1px solid black;
+  transition: box-shadow 0.3s ease-in-out;
+}
+
 .text-1 {
   font-family: var(--main-font);
   font-size: 24px;
@@ -61,7 +74,7 @@ main {
   transition: box-shadow 0.3s ease-in-out;
 }
 
-.blog-card:hover {
+.blog-card:hover, .info-card:hover {
   box-shadow: 16px 16px var(--gray-950);
 
   .article-title {
